--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"chart.js": "^4.3.0",
+		"chartjs-plugin-datalabels": "^2.2.0"
+	}
 }
